--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -35,7 +35,7 @@ de:
     from: aus
     info_approve_review: Die Rezension wurde freigeschaltet.
     leave_us_a_review_for: "Ihre Rezension über %{name}"
-    no_reviews_available: "Es sind noch keine Rezensionen für dieses Produkt vorhanden."
+    no_reviews_available: "Es sind noch keine Rezensionen zu diesem Produkt vorhanden."
     out_of_5: "von 5"
     rating: Bewertung
     reviews: Rezensionen
